@@ -1,4 +1,6 @@
 HEAD
+	+ Update support information due to offer 2013
+	+ Update messages in info models
 	+ Show ad messages in SubscriptionInfo model
 	+ Remove useless code due to offer 2013
 	+ Retrieve the maximum users from Zentyal Remote
